--- a/src/styles/mainCont_side.css
+++ b/src/styles/mainCont_side.css
@@ -1,213 +1,375 @@
 /* main_side1 */
 #main_side1 {
-    width: 100%;
-    height: auto;
-    margin-top: 70px;
-    background-image: url(/src/images/about_bg.gif);
-    background-position: center;
+  width: 100%;
+  height: auto;
+  margin-top: 70px;
+  background-image: url(/src/images/about_bg.gif);
+  background-position: center;
 }
 
 #main_side1 .main_side1_in {
-    width: 1280px;
-    height: auto;
-    padding: 70px 0;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    margin: auto;
+  width: 1280px;
+  height: auto;
+  padding: 70px 0;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  margin: auto;
 }
 
 #main_side1 .main_side1_in .side1_tit {
-    padding-top: 25px;
-    width: 300px;
+  padding-top: 25px;
+  width: 300px;
 }
 
 #main_side1 .main_side1_in .side1_tit .since {
-    font-family: 'Raleway', sans-serif;
-    font-size: 22px;
-    font-weight: 300;
-    color: #333333;
+  font-family: "Raleway", sans-serif;
+  font-size: 22px;
+  font-weight: 300;
+  color: #333333;
 }
 
 #main_side1 .main_side1_in .side1_tit p {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 300;
-    font-size: 19px;
-    color: #888888;
-    line-height: 150%;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 300;
+  font-size: 19px;
+  color: #888888;
+  line-height: 150%;
 }
 
 #main_side1 .main_side1_in .side1_tit img {
-    margin: 16px 0 25px;
+  margin: 16px 0 25px;
 }
 
 #main_side1 .main_side1_in .side1_tit div {
-    font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 300;
-    font-size: 14px;
-    font-weight: 400;
-    color: #333;
-    border: solid #333 1px;
-    width: 155px;
-    height: 51px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 49px;
+  font-family: "Noto Sans KR", sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  font-weight: 400;
+  color: #333;
+  border: solid #333 1px;
+  width: 155px;
+  height: 51px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 49px;
 }
 
 #main_side1 .main_side1_in ul {
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-    width: 948px;
+  display: flex;
+  text-align: center;
+  justify-content: space-between;
+  width: 948px;
 }
 
 #main_side1 .main_side1_in ul .icon {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 #main_side1 .main_side1_in ul li {
-    width: 297px;
-    height: 320px;
-    background-color: #ffffff;
-    font-family: 'Noto Sans KR', sans-serif;
-    padding: 0 15px;
+  width: 297px;
+  height: 320px;
+  background-color: #ffffff;
+  font-family: "Noto Sans KR", sans-serif;
+  padding: 0 15px;
 }
 
 #main_side1 .main_side1_in ul li img {
-    padding-top: 52px;
+  padding-top: 52px;
 }
 
 #main_side1 .main_side1_in ul li h6 {
-    font-size: 19px;
-    margin: 30px 0 14px;
+  font-size: 19px;
+  margin: 30px 0 14px;
 }
 
 #main_side1 .main_side1_in ul li p {
-    line-height: 180%;
-    color: #666;
+  line-height: 180%;
+  color: #666;
+  font-size: 15px;
+}
+
+@media screen and (max-width: 1310px) {
+  #main_side1 {
+    background-size: cover;
+    margin-top: 120px;
+  }
+
+  #main_side1 .main_side1_in {
+    width: calc(100% - 30px);
+  }
+
+  #main_side1 .main_side1_in .side1_tit p {
+    width: 300px;
+  }
+
+  #main_side1 .main_side1_in ul {
+    width: 100%;
+  }
+
+  #main_side1 .main_side1_in ul .icon {
+    margin-right: 2%;
+  }
+
+  #main_side1 .main_side1_in ul li {
+    width: 34%;
+    height: 330px;
+    padding: 10px 10px;
+    box-sizing: border-box;
+    padding: 42px 15px 0;
+  }
+
+  #main_side1 .main_side1_in ul li img {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 980px) {
+  #main_side1 {
+    margin-top: 90px;
+  }
+
+  #main_side1 .main_side1_in ul {
+    display: none;
+  }
+
+  #main_side1 .main_side1_in {
+    justify-content: center;
+    text-align: center;
+    padding: 30px 0;
+  }
+
+  #main_side1 .main_side1_in .side1_tit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #main_side1 .main_side1_in .side1_tit .since {
+    font-family: "Raleway", sans-serif;
+    font-size: 19px;
+    font-weight: 300;
+    color: #333333;
+  }
+
+  #main_side1 .main_side1_in .side1_tit p {
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 300;
+    font-size: 17px;
+    color: #888888;
+    line-height: 150%;
+  }
+
+  #main_side1 .main_side1_in .side1_tit img {
+    margin: 12px 0 21px;
+    width: 200px;
+    height: 36.69px;
+  }
+
+  #main_side1 .main_side1_in .side1_tit div {
+    margin-top: 40px;
+  }
+}
+@media screen and (max-width: 680px) {
+  #main_side1 {
+    width: 100%;
+    height: auto;
+    margin-top: 70px;
+    background-image: url(/src/images/about_bg_m.gif);
+    background-position: center;
+  }
+
+  #main_side1 .main_side1_in .side1_tit .since {
+    font-family: "Raleway", sans-serif;
+    font-size: 16px;
+    font-weight: 300;
+    color: #333333;
+  }
+
+  #main_side1 .main_side1_in .side1_tit p {
+    font-family: "Noto Sans KR", sans-serif;
+    font-weight: 300;
     font-size: 15px;
-}
+    color: #888888;
+    line-height: 150%;
+  }
 
-@media screen and (max-width: 1310px){
-    #main_side1 {
-        background-size: cover;
-        margin-top: 120px;
-    }
+  #main_side1 .main_side1_in .side1_tit img {
+    margin: 12px 0 21px;
+    width: 170px;
+    height: 31.19px;
+  }
 
-    #main_side1 .main_side1_in {
-        width: calc(100% - 30px);
-    }
-
-    #main_side1 .main_side1_in .side1_tit p {
-        width: 300px;
-    }
-
-    #main_side1 .main_side1_in ul {
-        width: 100%;
-    }
-
-    #main_side1 .main_side1_in ul .icon {
-        margin-right: 2%;
-    }
-
-    #main_side1 .main_side1_in ul li {
-        width: 34%;
-        height: 330px;
-        padding: 10px 10px;
-        box-sizing: border-box;
-        padding: 42px 15px 0;
-    }
-
-    #main_side1 .main_side1_in ul li img{
-        padding: 0;
-    }
-}
-@media screen and (max-width: 980px){
-    #main_side1 {
-        margin-top: 90px;
-    }
-
-    #main_side1 .main_side1_in ul {
-        display: none;
-    }
-
-    #main_side1 .main_side1_in {
-        justify-content: center;
-        text-align: center;
-        padding: 30px 0; 
-    }
-
-    #main_side1 .main_side1_in .side1_tit {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    #main_side1 .main_side1_in .side1_tit .since {
-        font-family: 'Raleway', sans-serif;
-        font-size: 19px;
-        font-weight: 300;
-        color: #333333;
-    }
-    
-    #main_side1 .main_side1_in .side1_tit p {
-        font-family: 'Noto Sans KR', sans-serif;
-        font-weight: 300;
-        font-size: 17px;
-        color: #888888;
-        line-height: 150%;
-    }
-    
-    #main_side1 .main_side1_in .side1_tit img {
-        margin: 12px 0 21px;
-        width: 200px;
-        height: 36.69px;
-    }
-
-    #main_side1 .main_side1_in .side1_tit div {
-        margin-top: 40px;
-    }
-    
-}
-@media screen and (max-width: 680px){
-    #main_side1 {
-        width: 100%;
-        height: auto;
-        margin-top: 70px;
-        background-image: url(/src/images/about_bg_m.gif);
-        background-position: center;
-    }
-
-    #main_side1 .main_side1_in .side1_tit .since {
-        font-family: 'Raleway', sans-serif;
-        font-size: 16px;
-        font-weight: 300;
-        color: #333333;
-    }
-    
-    #main_side1 .main_side1_in .side1_tit p {
-        font-family: 'Noto Sans KR', sans-serif;
-        font-weight: 300;
-        font-size: 15px;
-        color: #888888;
-        line-height: 150%;
-    }
-    
-    #main_side1 .main_side1_in .side1_tit img {
-        margin: 12px 0 21px;
-        width: 170px;
-        height: 31.19px;
-    }
-
-    #main_side1 .main_side1_in .side1_tit div {
-        margin-top: 20px;
-        margin-bottom: 18px;
-        font-size: 13px;
-    }
+  #main_side1 .main_side1_in .side1_tit div {
+    margin-top: 20px;
+    margin-bottom: 18px;
+    font-size: 13px;
+  }
 }
 
 /* main_side2 */
-#main_side2{}
+#main_side2 {
+  width: 100%;
+  height: auto;
+  margin-top: 70px;
+  background-image: url(/src/images/character_bg.gif);
+  background-position: center center;
+}
 
+#main_side2 .main_side2_in {
+  max-width: 1280px;
+  height: auto;
+  position: relative;
+  margin: auto;
+}
+
+#main_side2 .main_side2_in .left_img {
+  position: absolute;
+  bottom: 0;
+}
+
+#main_side2 .main_side2_in .side2_tit {
+  padding: 60px 0 80px;
+  width: 100%;
+}
+
+#main_side2 .main_side2_in .side2_tit h3 {
+  font-family: "Raleway", sans-serif;
+  font-size: 36px;
+  font-weight: 800;
+  color: rgb(51, 51, 51);
+  text-align: center;
+}
+
+#main_side2 .main_side2_in .side2_tit p {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: 19px;
+  font-weight: 300;
+  color: rgb(136, 136, 136);
+  margin: 6px 0 28px;
+  text-align: center;
+}
+
+#main_side2 .main_side2_in .side2_tit div {
+  display: none;
+}
+
+#main_side2 .main_side2_in .right_img {
+  position: absolute;
+  right: 9%;
+  bottom: 0;
+}
+
+@media screen and (max-width: 1310px) {
+  #main_side2 .main_side2_in {
+    margin: 0 auto;
+  }
+
+  #main_side2 .main_side2_in .left_img {
+    right: 50%;
+    margin-right: 204px;
+  }
+
+  #main_side2 .main_side2_in .right_img {
+    left: 50%;
+    margin-left: 239px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit div {
+    display: block;
+    width: 200px;
+    height: 51px;
+    font-family: "Noto Sans KR", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    border: solid rgb(51, 51, 51) 1px;
+    text-align: center;
+    margin: auto;
+    box-sizing: border-box;
+    padding: 12px 0;
+  }
+}
+
+@media screen and (max-width: 980px) {
+  #main_side2 {
+    margin-top: 50px;
+  }
+
+  #main_side2 .main_side2_in .left_img {
+    margin: 0;
+    left: -2%;
+    width: 290px;
+    height: 210px;
+  }
+
+  #main_side2 .main_side2_in .right_img {
+    margin: 0;
+    left: 82%;
+    width: 186px;
+    height: 209px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit {
+    padding: 75px 0 79px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit h3 {
+    font-size: 28px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit h3 img {
+    width: 110px;
+    height: 20.42px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit p {
+    font-size: 17px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit div span {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 680px) {
+  #main_side2 {
+    background-image: url(/src/images/about_bg_m.gif);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+  }
+
+  #main_side2 .main_side2_in .left_img {
+    margin: 0;
+    left: -2%;
+    width: 251px;
+    height: 180px;
+  }
+
+  #main_side2 .main_side2_in .right_img {
+    margin: 0;
+    left: 76%;
+    width: 175px;
+    height: 197px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit {
+    padding: 50px 0 150px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit h3 {
+    font-size: 24px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit h3 img {
+    width: 95px;
+    height: 17.64px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit p {
+    font-size: 15px;
+  }
+
+  #main_side2 .main_side2_in .side2_tit div span {
+    font-size: 13px;
+  }
+}
